General adjustments and fixed some issues within CMAKE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 find_package(OpenCV REQUIRED)
 
 # Add the executable
-add_executable(MysticImage main.cpp)
+add_executable(mysticimg mysticimg.cpp)
 
 # Link OpenCV libraries
-target_link_libraries(MysticImage ${OpenCV_LIBS})
+target_link_libraries(mysticimg ${OpenCV_LIBS})
 
 # Installation configuration
-install(TARGETS MysticImage
+install(TARGETS mysticimg
     RUNTIME DESTINATION bin
 )
 
@@ -30,7 +30,7 @@ include(InstallRequiredSystemLibraries)
 
 set(CPACK_PACKAGE_NAME "MysticImage")
 set(CPACK_PACKAGE_VENDOR "BorgesHQ")
-set(CPACK_PACKAGE_CONTACT "youremail@example.com")
+#set(CPACK_PACKAGE_CONTACT "youremail@example.com")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A tool to convert between binary files and images.")
 set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
