--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,23 @@ cmake_minimum_required(VERSION 3.10)
 project(MysticImage VERSION 1.0)
 
 # Set the C++ standard
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Find OpenCV package
 find_package(OpenCV REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIRS})
+find_package(OpenSSL REQUIRED)
+include_directories(${OpenSSL_INCLUDE_DIRS})
+
+# Add the STATIC library
+add_library(mystic STATIC src/Standard.cpp src/Smoke.cpp)
 
 # Add the executable
-add_executable(mysticimg mysticimg.cpp)
+add_executable(mysticimg src/mystic.cpp)
 
 # Link OpenCV libraries
-target_link_libraries(mysticimg ${OpenCV_LIBS})
+target_link_libraries(mysticimg mystic ${OpenCV_LIBS})
 
 # Installation configuration
 install(TARGETS mysticimg
