Further description adjustments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ include(InstallRequiredSystemLibraries)
 set(CPACK_PACKAGE_NAME "MysticImage")
 set(CPACK_PACKAGE_VENDOR "BorgesHQ")
 #set(CPACK_PACKAGE_CONTACT "youremail@example.com")
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A tool to convert between binary files and images.")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A tool and library to convert between binary files and images.")
 set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
 set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
